Fixed the background video not showing up.

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'MicroExtendFLF-Bold', Arial, sans-serif;
 }
 
-.title {
+a, .title {
   text-decoration: underline;
 }
 
