--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -9,14 +9,6 @@
 
 .hover-btn:hover { cursor: pointer; }
 
-body {
-  background: $pkut-grey-light;
-}
-
-a {
-  text-decoration: underline;
-}
-
 textarea {
   resize: none;
 }
