--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -9,6 +9,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   font-family: 'Young', Arial, sans-serif;
+  background-color: $pkut-grey-light;
 }
 
 /* fix bs3 horizontal scrollbar bug */
